--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
 		   <version>2.7.0</version>
 		</dependency>
 		
+		<!-- LOMBOK FOR ENTITIES -->
+		<dependency>
+	        <groupId>org.projectlombok</groupId>
+	        <artifactId>lombok</artifactId>
+	        <version>1.18.10</version>
+	        <scope>provided</scope>
+    	</dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
