--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=springDemo
+spring.datasource.url=jdbc:sqlserver://0.0.0.0:1434;databaseName=springDemo
 spring.datasource.username=SA
 spring.datasource.password=S@ransh909
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = none
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
